--- a/frontend/index.html
+++ b/frontend/index.html
@@ -16,280 +16,14 @@
 <body>
     <div id="app"></div>
 
-    <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
-    <script src="https://unpkg.com/axios@1.6.7/dist/axios.min.js"></script>
-
-    <script>
-        const PRODUCTOS_SERVICE_URL = `http://localhost:3000/api/productos`;
-        const PERSONAS_SERVICE_URL = `http://localhost:3000/api/personas`;
-        const VENTAS_SERVICE_URL = `http://localhost:3000/api/ventas`;
-
-        const { createApp, ref, onMounted } = Vue;
-
-        const App = {
-            setup() {
-
-                // UTILS
-                let errorMessage = ref(false);
-
-                const formatDate = (date) => {
-                    const d = new Date(date);
-                    const year = d.getFullYear();
-                    const month = String(d.getMonth() + 1).padStart(2, '0');
-                    const day = String(d.getDate()).padStart(2, '0');
-                    const hours = String(d.getHours()).padStart(2, '0');
-                    const minutes = String(d.getMinutes()).padStart(2, '0');
-
-                    return `${year}/${month}/${day} ${hours}:${minutes}`;
-                };
-
-
-                // LISTAR PRODUCTOS
-                let productos = ref([]);
-
-                const getProductos = async () => {
-                    const { data } = await axios.get(PRODUCTOS_SERVICE_URL);
-                    productos.value = data;
-                };
-
-                const getProducto = async (id) => {
-                    const { data } = await axios.get(`${PRODUCTOS_SERVICE_URL}/${id}`);
-                    producto.value = data;
-                };
-
-                const selectProducto = () => {
-                    const producto_id = venta.value.producto_id;
-                    const found = productos.value.find(item => item.id === producto_id);
-                    if (found) {
-                        venta.value.precio = found.precio;
-                    }
-                };
-
-                // CREAR PRODUCTO
-                const producto = ref({
-                    id: 0,
-                    nombre: '',
-                    costo: 0,
-                    precio: 0,
-                    cantidad: 1,
-                });
-
-                const ingresarProductoDialog = ref();
-                const openIngresarProductoDialog = () => {
-                    ingresarProductoDialog.value.showModal();
-                };
-                const closeIngresarProductoDialog = () => {
-                    ingresarProductoDialog.value.close();
-                };
-
-                const createProducto = async () => {
-                    const body = producto.value;
-                    const { data } = await axios.post(PRODUCTOS_SERVICE_URL, body);
-                    await getProductos();
-                };
-
-                // MODIFICAR PRODUCTO
-                const modificarProductoDialog = ref();
-                const openModificarProductoDialog = async (id) => {
-                    await getProducto(id);
-                    modificarProductoDialog.value.showModal();
-                };
-                const closeModificarProductoDialog = () => {
-                    modificarProductoDialog.value.close();
-                };
-
-                const updateProducto = async () => {
-                    const body = producto.value;
-                    const { data } = await axios.put(`${PRODUCTOS_SERVICE_URL}/${body.id}`, body);
-                    await getProductos();
-                };
-
-                // LISTAR PERSONAS
-                let personas = ref([]);
-
-                const getPersonas = async () => {
-                    const { data } = await axios.get(PERSONAS_SERVICE_URL);
-                    personas.value = data;
-                };
-
-                const getPersona = async (id) => {
-                    const { data } = await axios.get(`${PERSONAS_SERVICE_URL}/${id}`);
-                    persona.value = data;
-                };
-
-                const selectPersona = () => {
-                    const persona_id = venta.value.persona_id;
-                    const found = personas.value.find(item => item.id === persona_id);
-                    if (found) {
-                        venta.value.nombre = found.nombre;
-                    }
-                };
-
-                // CREAR PERSONA
-                const persona = ref({
-                    id: 0,
-                    nombre: '',
-                });
-
-                const ingresarPersonaDialog = ref();
-                const openIngresarPersonaDialog = () => {
-                    ingresarPersonaDialog.value.showModal();
-                };
-                const closeIngresarPersonaDialog = () => {
-                    ingresarPersonaDialog.value.close();
-                };
-
-                const createPersona = async () => {
-                    const body = persona.value;
-                    const { data } = await axios.post(PERSONAS_SERVICE_URL, body);
-                    await getPersonas();
-                };
-
-                // MODIFICAR PERSONA
-                const modificarPersonaDialog = ref();
-                const openModificarPersonaDialog = async (id) => {
-                    await getPersona(id);
-                    modificarPersonaDialog.value.showModal();
-                };
-                const closeModificarPersonaDialog = () => {
-                    modificarPersonaDialog.value.close();
-                };
-
-                const updatePersona = async () => {
-                    const body = persona.value;
-                    const { data } = await axios.put(`${PERSONAS_SERVICE_URL}/${body.id}`, body);
-                    await getPersonas();
-                };
-
-                // CREAR VENTA
-                const venta = ref({
-                    persona_id: 0,
-                    producto_id: 0,
-                    precio: 0,
-                    cantidad: 1,
-                });
-
-                const createVenta = async () => {
-                    const body = venta.value;
-                    try {
-                        const { data } = await axios.post(VENTAS_SERVICE_URL, body);
-                    } catch (error) {
-                        errorMessage.value = error.response.data ? error.response.data.error : false;
-                    } finally {
-                        await getVentas();
-                        await getProductos();
-                    }
-                };
-
-                // LISTAR VENTAS
-                let ventas = ref([]);
-
-                const getVentas = async () => {
-                    const { data } = await axios.get(VENTAS_SERVICE_URL);
-                    ventas.value = data;
-                };
-
-                const getVenta = async (id) => {
-                    const { data } = await axios.get(`${VENTAS_SERVICE_URL}/${id}`);
-                    venta.value = data;
-                };
-
-                // INGRESAR VENTA
-                const ingresarVentaDialog = ref();
-                const openIngresarVentaDialog = async ({ personaId, productoId } = {}) => {
-                    if (personaId) {
-                        await getPersona(personaId);
-                        venta.value = Object.assign(venta.value, {
-                            persona_id: persona.value.id,
-                        });
-                    }
-                    if (productoId) {
-                        await getProducto(productoId);
-                        venta.value = Object.assign(venta.value, {
-                            producto_id: producto.value.id,
-                            precio: producto.value.precio,
-                            cantidad: 1,
-                        });
-                    }
-                    ingresarVentaDialog.value.showModal();
-                };
-                const closeIngresarVentaDialog = () => {
-                    ingresarVentaDialog.value.close();
-                };
-
-                // MODIFICAR VENTA
-                const modificarVentaDialog = ref();
-                const openModificarVentaDialog = async (id) => {
-                    await getVenta(id);
-                    modificarVentaDialog.value.showModal();
-                };
-                const closeModificarVentaDialog = () => {
-                    modificarVentaDialog.value.close();
-                };
-
-                const updateVenta = async () => {
-                    const body = venta.value;
-                    const { data } = await axios.put(`${VENTAS_SERVICE_URL}/${body.id}`, body);
-                    await getVentas();
-                    await getProductos();
-                };
-
-
-                onMounted(async () => {
-                    await getProductos();
-                    await getPersonas();
-                    await getVentas();
-                })
-
-                return {
-                    errorMessage,
-                    formatDate,
-
-                    productos,
-                    producto,
-                    getProductos,
-                    selectProducto,
-                    ingresarProductoDialog,
-                    openIngresarProductoDialog,
-                    closeIngresarProductoDialog,
-                    createProducto,
-                    modificarProductoDialog,
-                    openModificarProductoDialog,
-                    closeModificarProductoDialog,
-                    updateProducto,
-
-                    personas,
-                    persona,
-                    getPersonas,
-                    selectPersona,
-                    ingresarPersonaDialog,
-                    openIngresarPersonaDialog,
-                    closeIngresarPersonaDialog,
-                    createPersona,
-                    modificarPersonaDialog,
-                    openModificarPersonaDialog,
-                    closeModificarPersonaDialog,
-                    updatePersona,
-
-                    ventas,
-                    venta,
-                    getVentas,
-                    getVenta,
-                    createVenta,
-                    ingresarVentaDialog,
-                    openIngresarVentaDialog,
-                    closeIngresarVentaDialog,
-                    modificarVentaDialog,
-                    openModificarVentaDialog,
-                    closeModificarVentaDialog,
-                    updateVenta,
-                }
-            },
-
-        };
-
-        createApp(App).mount('#app')
+    <script type="importmap">
+        { "imports": {
+          "vue": "https://unpkg.com/vue@3/dist/vue.esm-browser.js",
+          "axios": "https://cdn.jsdelivr.net/npm/axios@1.6.7/dist/esm/axios.min.js"
+        } }
     </script>
+
+    <script type="module" src="./js/main.js"></script>
 </body>
 
 </html>
