--- a/backend/gateway-service/frontend/index.html
+++ b/backend/gateway-service/frontend/index.html
@@ -2,28 +2,28 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tienda 211</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Tienda 211</title>
 
-    <link rel="stylesheet" href="https://matcha.mizu.sh/matcha.css">
+	<link rel="stylesheet" href="https://matcha.mizu.sh/matcha.css">
 
-    <style>
-
-    </style>
+	<style>
+	</style>
 </head>
 
 <body>
-    <div id="app"></div>
+	<div id="app"></div>
 
-    <script type="importmap">
+	<script type="importmap">
         { "imports": {
           "vue": "https://unpkg.com/vue@3/dist/vue.esm-browser.js",
-          "axios": "https://cdn.jsdelivr.net/npm/axios@1.6.7/dist/esm/axios.min.js"
+          "axios": "https://cdn.jsdelivr.net/npm/axios@1.6.7/dist/esm/axios.min.js",
+		  "socket.io-client": "https://cdn.socket.io/4.7.5/socket.io.esm.min.js"
         } }
     </script>
 
-    <script type="module" src="./js/main.js"></script>
+	<script type="module" src="./js/main.js"></script>
 </body>
 
 </html>
